--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "highcharts-vue": "^2.0.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
